change appointment model
