# controllers/AppointmentController.js
@@ -4,11 +4,11 @@ const { getBaseurl } = require("./helpers.js")
 
 //Create
 exports.createNew = async (req, res) => {
-    if (!req.body.customerId || !req.body.serviceId || !req.body.barberId || !req.body.datetime) {
+    if (!req.body.customerId || !req.body.barberServiceId || !req.body.datetime) {
         return res.status(400).send({ error: "one or more parameters are missing" })
     }
     const createdAppointment = await appointments.create(req.body, {
-        fields: ["id", "customerId", "serviceId", "barberId", "datetime"]
+        fields: ["id", "customerId", "barberServiceId", "datetime"]
     })
     res.status(201)
         .location(`${getBaseurl(req)}/appointments/${createdAppointment.id}`)
@@ -17,7 +17,7 @@ exports.createNew = async (req, res) => {
 
 //Read
 exports.getAll = async (req, res) => {
-    const result = await appointments.findAll({ attributes: ["id","customerId", "serviceId", "barberId", "datetime"] })
+    const result = await appointments.findAll({ attributes: ["id","customerId", "barberServiceId", "datetime"] })
     res.json(result)
 }
 exports.getById = async (req, res) => {
@@ -32,7 +32,7 @@ exports.getById = async (req, res) => {
 exports.editById = async (req, res) => {
     const updatedResult = await appointments.update({ ...req.body }, {
         where: { id: req.params.id },
-        fields: ["id", "customerId", "serviceId", "barberId", "datetime"]
+        fields: ["id", "customerId", "barberServiceId", "datetime"]
     })
     if (updatedResult[0] == 0) {
         return res.status(404).send({ error: "Appointment not found" })
